# macro

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  build.sh  bundle.sh  package.json  plans.md  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: generate_cert.sh
settings-ui/: index.html  package-lock.json  package.json  vite.config.js
settings-ui/src/: App.css  App.jsx
src/: App.css  App.jsx  bar_app.rs  config.rs  index.css  lib.rs  main.rs  play.rs  record.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  event.rs  lib.rs  main.rs  play.rs  record.rs
