[package]
name = "event-replay-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
rdev = { version = "0.5", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rfd = "0.16.0"
directories = "6.0.0"
cliclack = "0.3.6"
