[package]
name = "macro"
version = "1.0.0"
edition = "2024"

[lib]
name = "macro_lib"
path = "src/lib.rs"



[dependencies]
rdev = { version = "0.5", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rfd = "0.16.0"
directories = "6.0.0"
chrono = "0.4.42"
tray-icon = "0.19.2"
tao = "0.30.8"
env_logger = "0.11.6"
log = "0.4.22"
dirs = "6.0.0"
once_cell = "1.19.0"
global-hotkey = "0.5.0"
ctrlc = "3.4"
pollster = "0.3"
