[package]
name = "macro"
version = "0.1.0"
edition = "2021"

[lib]
name = "macro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
rdev = { version = "0.5", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
directories = "6.0.0"
